# IonicEngine.rs.old

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/graphics/: macros.rs  mod.rs  primitives.rs  shader.rs
src/graphics/assets/: gl_primitive.rs  gpu_vectors.rs  mod.rs  vao.rs  vbo.rs
src/shaders/: fragment.c  fragment.glsl  vertex.c  vertex.glsl
src/system/: context.rs  mod.rs  window.rs
