[package]
name = "ionic_engine"
version = "1.0.0-1"
authors = ["w67clement"]

[dependencies]
gl = "0.6.*"

[dependencies.glfw]
git = "https://github.com/PistonDevelopers/glfw-rs.git"
# Okay, Windows users, don't use `default-features = false`...
# It's really stupid...
# If the compile doesn't works, install CMake and glfw libraries on your system...
#default-features = false
